<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:id="@+id/captchWrapper">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/captchaHeader"
            >

            <TextView
                android:id="@+id/captchTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_without_nfccard"
                android:textColor="@color/orange"
                android:textSize="30sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:layout_weight="0.3"/>

            <TextView
                android:id="@+id/captchIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="left"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:paddingTop="10dp"
                android:text="@string/captch_game_intro"
                android:textColor="@color/grayTextColor"
                android:textSize="20dp"
                android:background="@color/white"
                android:layout_weight="0.3"/>

            <TextView
                android:id="@+id/captchRule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="left"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:paddingTop="10dp"
                android:text="@string/captch_rule"
                android:textColor="@color/grayTextColor"
                android:textSize="20dp"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/captchGridWrapper"
            >

            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/captchGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:horizontalSpacing="0dp"
                android:numColumns="5"
                android:stretchMode="spacingWidthUniform"
                android:verticalSpacing="4dp" />
        </LinearLayout>
    </LinearLayout>
</merge>