<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:background="@color/white"
        android:orientation="vertical"
        android:id="@+id/dialogActionContainer">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.43"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_appointment"
                android:textColor="@color/orange"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialogInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:paddingTop="10dp"
                android:text="@string/confirm_appointment_info"
                android:textColor="@color/grayTextColor"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.22"
            android:background="@android:color/white"
            android:gravity="end"
            android:orientation="horizontal"
            android:id="@+id/dialogImageWrapper">

            <ImageView
                android:id="@+id/dialogImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/confirm_action_nfc" />

            <ImageView
                android:id="@+id/confirmCapcha"
                android:layout_width="261dp"
                android:layout_height="154dp"
                android:layout_gravity="bottom"
                android:maxWidth="200dp"
                android:src="@drawable/confirm_captcha" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.45"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonFinishDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="0.2"
            android:background="@color/white"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@color/create_button"
            android:textSize="40sp" />

        <ProgressBar
            android:id="@+id/timerProgressBar"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="0.8"
            android:indeterminate="false"
            android:progressDrawable="@drawable/progress_bar_confirm_action" />

    </LinearLayout>
</LinearLayout>